# Spaceship-Generator

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: bench.yml  ci.yml  release.yml
docs/: CHANGELOG.md  api.md  architecture.md  bench-ci.md  cli.md  docker.md  faq.md  gallery.md  palette_authoring.md  palettes.md  performance.md  presets.md  quickstart.md  release.md  security.md  smoke-e2e.md  todo.md  troubleshooting.md  web_ui.md
palettes/: abyss_deep.yaml  alien_bio.yaml  amethyst_crystal.yaml  ancient_city.yaml  ancient_ruin.yaml  autumn_harvest.yaml  badlands_mesa.yaml  biopunk_fungal.yaml  candy_pop.yaml  cherry_blossom.yaml  cherry_grove.yaml  circus_bigtop.yaml  coral_reef.yaml  crimson_nether.yaml  cyberpunk_neon.yaml  dark_forest.yaml  deep_dark.yaml  deepslate_drone.yaml  desert_sandstone.yaml  desert_temple.yaml  diamond_tech.yaml  dripstone_cave.yaml  end_city.yaml  end_void.yaml  forest_camouflage.yaml  frozen_tundra.yaml  gold_imperial.yaml  ice_crystal.yaml  ice_spikes.yaml  jagged_peaks.yaml  jungle_canopy.yaml  lava_forge.yaml  lush_caves.yaml  mangrove_swamp.yaml  mushroom_islands.yaml  nebula_drift.yaml  neon_arcade.yaml  nether_wastes.yaml  nordic_scout.yaml  pale_garden.yaml  (+17 more)
scripts/: bench_compare.py  bench_fleet.py  bench_full_pipeline.py  bench_generator.py  bench_mem.py  bench_palette.py  bench_shape.py  bench_summary.py  gen_gallery.py  palette_lint.py  run.bat  smoke_e2e.py
src/spaceship_generator/: __init__.py  __main__.py  block_colors.py  cli.py  engine_styles.py  export.py  fleet.py  generator.py  greeble_styles.py  palette.py  presets.py  preview.py  shape.py  structure_styles.py  texture.py  weapon_styles.py  wing_styles.py
src/spaceship_generator/data/: block_colors.json  block_texture_stems.json
src/spaceship_generator/shape/: __init__.py  assembly.py  cockpit.py  core.py  engines.py  greebles.py  hull.py  wings.py
src/spaceship_generator/web/: app.py
src/spaceship_generator/web/blueprints/: __init__.py  errors.py  ratelimit.py  ship.py  ship_support.py  static_ext.py
src/spaceship_generator/web/static/: app.js  app_core.js  app_ui.js  history.js  hud.js  live_preview.js  polish.js  presets.js  preview.js  preview_bootstrap.js  preview_math.js  preview_renderer.js  shortcuts.js  style.css  style_base.css  style_controls.css  style_preview.css
src/spaceship_generator/web/templates/: _error.html  _result.html  base.html  index.html  result.html
tests/: test_api.py  test_api_spec_validate.py  test_bench_smoke.py  test_block_colors.py  test_block_colors_extra.py  test_cli.py  test_cli_extra.py  test_engine_styles.py  test_export.py  test_fleet.py  test_generator.py  test_greeble_styles.py  test_integration.py  test_palette.py  test_palette_extra.py  test_palette_lint.py  test_perf_label.py  test_presets.py  test_preview.py  test_properties.py  test_shape.py  test_smoke_e2e.py  test_structure_styles.py  test_texture.py  test_weapon_styles.py  test_web.py  test_web_ui.py  test_wing_styles.py
