[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceship-generator"
version = "0.1.0"
description = "Procedurally generate Minecraft spaceships and export them as Litematica schematic (.litematic) files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "KazooKat" }]
requires-python = ">=3.11"
keywords = ["minecraft", "litematica", "procedural-generation", "spaceship", "voxel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "litemapy>=0.11.0b0",
    "numpy>=1.26",
    "flask>=3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=7", "hypothesis>=6", "ruff>=0.5"]
docker = ["gunicorn>=22"]
all = ["spaceship-generator[dev,docker]"]

[project.urls]
Homepage = "https://github.com/KazooKat/Spaceship-Generator"
Issues = "https://github.com/KazooKat/Spaceship-Generator/issues"

[project.scripts]
spaceship-generator = "spaceship_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spaceship_generator = ["py.typed", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["ui: web UI tests (slower)"]
filterwarnings = [
  "ignore::RuntimeWarning:runpy"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]
